fix: Remove dhis-service-program-rule module [DHIS2-17706] (#17978)
* fix: Remove dhis-service-program-rule module [DHIS2-17706]

* Fix formatting

* Fix sonar issues