@@ -25,7 +25,7 @@
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-package org.hisp.dhis.programrule.engine;
+package org.hisp.dhis.tracker.imports.programrule.engine;
 
 import com.google.common.collect.Maps;
 import java.util.ArrayList;
@@ -81,7 +81,7 @@ public class SupplementaryDataProvider {
                               .getMembers()
                               .stream()
                               .map(OrganisationUnit::getUid)
-                              .collect(Collectors.toList())));
+                              .toList()));
     }
 
     if (CurrentUserUtil.getCurrentUsername() != null) {
